@@ -1,3 +1,10 @@
+2017-11-03 Riccardo Mottola <rm@gnu.org>
+
+	* DBSFTypeWrappers.h
+        * DBSFTypeWrappers.m
+	* DBSoap.m
+        Simplify initializers and uniform to initWithSFString when parsing results.
+
 2017-11-02 Riccardo Mottola <rm@gnu.org>
 
 	* DBSFTypeWrappers.h
